--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -108,7 +108,7 @@
                 <a href="{{recording.data_folder}}">{{recording.title}}</a>
             </td>
             <td>
-                <audio controls src="{{recording.stereo_mix}}" preload="metadata"></audio>
+                <audio controls src="{{recording.data_folder}}/{{recording.stereo_mix}}" preload="metadata"></audio>
             </td>
             <td>
                 <!-- technical details of the recording here-->
