--- a/templates/recording_index.html
+++ b/templates/recording_index.html
@@ -61,9 +61,9 @@
                     <audio controls src="{{recording.stereo_mix.vorbis}}" preload="metadata"></audio>
                 </td>
                 <td>
-                    <a href="{{recording.stereo_mix.flac}}">Flac</a> {{recording.stereo_mix.flac_size()}}
+                    <a href="{{recording.stereo_mix.flac}}" download>Flac</a> {{recording.stereo_mix.flac_size()}}
                     |
-                    <a href="{{recording.stereo_mix.vorbis}}">Ogg</a> {{recording.stereo_mix.ogg_size()}}
+                    <a href="{{recording.stereo_mix.vorbis}}" download>Ogg</a> {{recording.stereo_mix.ogg_size()}}
                 </td>
                 <td>
                     This is the stereo mix, and is basicaly what you would have heard during the live stream
@@ -80,9 +80,9 @@
                     <audio controls src="{{track.vorbis}}" preload="metadata"></audio>
                 </td>
                 <td>
-                    <a href="{{track.flac}}">Flac</a> {{track.flac_size()}}
+                    <a href="{{track.flac}}" download>Flac</a> {{track.flac_size()}}
                     |
-                    <a href="{{track.vorbis}}">Ogg</a> {{track.ogg_size()}}
+                    <a href="{{track.vorbis}}" download>Ogg</a> {{track.ogg_size()}}
                 </td>
                 <td>
                     {{track.patch_notes()}}
