Show BMP and other things in the rendered pages

--- a/static/style.css
+++ b/static/style.css
@@ -17,3 +17,17 @@ div#ipfs .pre {
     padding: 5px;
     margin: 5px;
 }
+
+.tag {
+    border-radius: 8px;
+    background-color: lightblue;
+    padding: 3px 8px 3px 8px;
+}
+
+.tag.filtered {
+    background-color: lightcoral;
+}
+
+.tag:before {
+    content: "#"
+}
