Don't preload audio
Even with preload=metadata, we ended up spamping the browser with
(sometimes slow-running) connections.  This often caused chrome to stall
with "waiting for available socket" messages

--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -120,7 +120,7 @@
                 </td>
                 <td>
                     <audio controls src="{{recording.data_folder}}/{{recording.stereo_mix.vorbis}}"
-                        preload="metadata"></audio>
+                        preload="none"></audio>
                 </td>
                 <td>
                     {% if recording.bpm.is_some() %}
