--- a/templates/recording_index.html
+++ b/templates/recording_index.html
@@ -196,7 +196,7 @@
                     track {{track.id}}: <br /> {{track.name}}
                 </td>
                 <td>
-                    <audio controls src="{{track.vorbis|safe}}" preload="metadata"></audio>
+                    <audio controls src="{{track.vorbis|safe}}" preload="none"></audio>
                 </td>
                 <td>
                     <a href="{{track.flac|safe}}" download>Flac</a> {{track.flac_size_str()}}
