Sort main tag list so output is deterministic

--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -104,7 +104,7 @@
 
         <div id="filtercontrol">
             Click to filter (contrl+click to select multiple):
-            {% for tag in tag_set %}
+            {% for tag in tag_list %}
             <span class="tag" data-tag="{{tag}}">{{tag}}</span>
             {% endfor %}
         </div>
