--- a/templates/recording_index.html
+++ b/templates/recording_index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    {{ gitlab_review|safe }}
     <title>BenderFactory Stems for </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="style.css" />
