--- a/templates/season_index.html
+++ b/templates/season_index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    {{ gitlab_review|safe }}
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="style.css" />
     <style>
